--- a/webdashboard/templates/layout.html
+++ b/webdashboard/templates/layout.html
@@ -3,6 +3,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style type="text/css">
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+    width: 100%;
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+tr:nth-child(even) {background-color: #f2f2f2}
+
+    </style>
 </head>
 <body>
 	<div class="content">
