--- a/webdashboard/templates/layout.html
+++ b/webdashboard/templates/layout.html
@@ -1,10 +1,15 @@
+<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style type="text/css">
 
+    <script src="js/smoothie.js" type="text/javascript" language="javascript"></script>
+    <script src="js/angular.js" type="text/javascript" language="javascript"></script>
+    <script src="js/controllers.js" type="text/javascript" language="javascript"></script>
+
+    <style type="text/css">
 body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
@@ -23,10 +28,11 @@ th, td {
 tr:nth-child(even) {background-color: #f2f2f2}
 
     </style>
+    <title>Sensor dashboard</title>
 </head>
-<body>
-	<div class="content">
-		{% block body %}{% endblock %}
-	</div>
+<body ng-app="dashboard">
+  <div class="content">
+    {% block body %}{% endblock %}
+  </div>
 </body>
 </html>
